--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -125,7 +125,7 @@
   --bg-dialog: #C0C0C0;
   --bg-dialog-shadow: #808080;
   --bg-input: #FFFFFF;
-  --bg-scrollbar: #C0C0C0;
+  --bg-scrollbar: #808080;
 
   --fg-primary: #000000;
   --fg-secondary: #555555;
